added IViewProjection interface that combines a view and projection; added IRenderView interface that extends IViewProjection with a Region in pixel coordinates; added extension PixelsPerUnitOnNearPlane and GetVisualHull similar to Aardvark 2010; extended CoordinateSystem transformation with general FromTo method;

--- a/src/Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj
+++ b/src/Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Camera\ICameraProjectionExtensions.cs" />
     <Compile Include="Camera\ICameraView.cs" />
     <Compile Include="Camera\ICameraViewExtensions.cs" />
+    <Compile Include="Camera\IRenderView.cs" />
+    <Compile Include="Camera\IRenderViewExtensions.cs" />
     <Compile Include="Editing\BehaviorDragAbsolute.cs" />
     <Compile Include="Editing\BehaviorDragRelative.cs" />
     <Compile Include="Editing\IBehaviorSplittableEdge2d.cs" />
