[Scratch] SF implementation - SFs publish a pattern to wait for and a continuation (everything obj due to missing GADTs in F#) - The Runner waits for all pattern-inputs and pushes them through the system (virtually sequential event-stream) - Subscriptions are handled "per-iteration" which means that "persistent" subscriptions will not be destroyed/recreated

--- a/src/Demo/Scratch/Scratch.fsproj
+++ b/src/Demo/Scratch/Scratch.fsproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Store.fs" />
+    <Compile Include="SF.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
