[Incremental] new set/list implementation import

--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -104,6 +104,7 @@
     <Compile Include="Native\FileTable.fs" />
     <Compile Include="Native\Manager.fs" />
     <Compile Include="Native\Store.fs" />
+    <Compile Include="MapExt.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
