--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -52,6 +52,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(FSharpTargetsPath)" Condition="exists('$(FSharpTargetsPath)')" />
   <ItemGroup>
+    <Compile Include="Core\Basics.fs" />
     <Compile Include="Core\Telemetry.fs" />
     <Compile Include="Core\Utilities.fs" />
     <Compile Include="Core\PriorityQueue.fs" />
@@ -64,18 +65,15 @@
     <Compile Include="Core\Validation.fs" />
     <Compile Include="Mod\Mod.fs" />
     <Compile Include="Mod\InstancedMod.fs" />
-    <Compile Include="AdaptiveSet\AdaptiveSetCore.fs" />
-    <Compile Include="AdaptiveSet\ChangeableSet.fs" />
-    <Compile Include="AdaptiveSet\AdaptiveSet.fs" />
-    <Compile Include="AdaptiveSet\DeltaQueue.fs" />
-    <Compile Include="AdaptiveList\AdaptiveListCore.fs" />
-    <Compile Include="AdaptiveList\ChangeableList.fs" />
-    <Compile Include="AdaptiveList\AdaptiveList.fs" />
-    <Compile Include="AdaptiveMap\AdaptiveMap.fs" />
+    <Compile Include="Mod\History.fs" />
+    <Compile Include="AdaptiveSet\pmap.fs" />
+    <Compile Include="AdaptiveSet\deltaset.fs" />
+    <Compile Include="AdaptiveSet\prefset.fs" />
+    <Compile Include="AdaptiveSet\aset.fs" />
+    <Compile Include="AdaptiveList\deltalist.fs" />
+    <Compile Include="AdaptiveList\plist.fs" />
+    <Compile Include="AdaptiveList\alist.fs" />
     <Compile Include="AdaptiveFunc\AdaptiveFunc.fs" />
-    <Compile Include="AdaptiveStream\AdaptiveStreamCore.fs" />
-    <Compile Include="AdaptiveStream\AdaptiveStream.fs" />
-    <Compile Include="Events\Observable.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
     <Compile Include="DomainTypeUtilities.fs" />
